--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream blog {
-    # service name and 0.0.0.0:9000->8000/tcp port : 8000 is inner container(blog_web) port.
+    # service name or container name and server is same  0.0.0.0:9000->8000/tcp port : 8000 is inner container(blog_web) port.
     server blog_web:8000;
 }
 
